# openstack_codegenerator

./: .gitreview  .pre-commit-config.yaml  README.rst  bindep.txt  pyproject.toml  pyptoject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  zuul.yaml
codegenerator/: ansible.py  base.py  cli.py  jsonschema.py  metadata.py  model.py  openapi_spec.py  osc.py  rust_cli.py  rust_sdk.py
codegenerator/common/: __init__.py  rust.py  schema.py
codegenerator/openapi/: base.py  cinder.py  cinder_schemas.py  glance.py  ironic.py  keystone.py  manila.py  neutron.py  neutron_schemas.py  nova.py  nova_schemas.py  octavia.py  placement.py  utils.py
codegenerator/openapi/cinder_schemas/: attachment.py  backup.py  cluster.py  common.py  extension.py  group.py  group_snapshot.py  group_type.py  host.py  limit.py  message.py  qos.py  resource_filter.py  snapshot.py  snapshot_manage.py  volume.py  volume_manage.py  volume_transfer.py  volume_type.py
codegenerator/openapi/keystone_schemas/: application_credential.py  auth.py  common.py  domain.py  endpoint.py  federation.py  group.py  project.py  region.py  role.py  service.py  user.py
codegenerator/templates/: rust_macros.j2
codegenerator/templates/rust_cli/: impl.rs.j2  invoke_list_from_struct.j2  path_parameters.j2  response_struct.j2  set_body_parameters.j2  set_query_parameters.j2
codegenerator/templates/rust_sdk/: impl.rs.j2  request_struct.j2
codegenerator/tests/functional/: test_openapi_cinder.py  test_openapi_keystone.py  test_openapi_octavia.py
codegenerator/tests/unit/: test_common.py  test_model.py  test_model_object.py  test_rust_sdk.py
doc/: requirements.txt
doc/source/: conf.py
metadata/: block-storage_metadata.yaml  compute_metadata.yaml  identity_metadata.yaml  load-balancer_metadata.yaml  network_metadata.yaml  object-store_metadata.yaml  shared-file-system_metadata.yaml
playbooks/codegenerator/: pre.yaml
playbooks/openapi/: fetch.yaml  post.yaml  pre-api-ref.yaml  pre-compute.yaml  pre.yaml  publish.yaml  run.yaml  static.yaml
playbooks/rust/: all.yaml  post.yaml  propose-github.yaml
releasenotes/source/: conf.py  index.rst
roles/codegenerator/defaults/: main.yaml
roles/codegenerator/tasks/: main.yaml
roles/copy_rust_code/tasks/: main.yaml  resource.yaml
roles/ensure-codegenerator/defaults/: main.yaml
roles/ensure-codegenerator/tasks/: main.yaml
tools/: generate_openapi_specs.sh  generate_rust.sh  generate_rust_block_storage.sh  generate_rust_identity.sh  generate_rust_image.sh  generate_rust_load_balancer.sh  generate_rust_network.sh  generate_rust_object_store.sh
zuul.d/: openapi.yaml  project.yaml  rust.yaml
