[metadata]
name = openstack-codegenerator
summary = Generator for OpenStack stuff
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/openstacksdk/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

python_requires = >=3.10

[files]
packages =
    codegenerator

[entry_points]
console_scripts =
    openstack-codegenerator = codegenerator.cli:main

[extras]
block-storage =
    cinder>=23.0
compute =
    nova>=28.0
identity =
    keystone>=23.0
image =
    glance>=27.0
load-balancing =
    octavia>=11.0
network =
    neutron>=23.1
    neutron-vpnaas>=23.0
placement =
    openstack-placement>=10.0
shared-file-system =
    manila>=18.0
baremetal =
    ironic>=26.0

[mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
# follow_imports = normal
follow_imports = skip
incremental = true
check_untyped_defs = true
warn_unused_ignores = true
